# opengl_demo

./: CMakeLists.txt  demo1.cpp  demo2.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: shader.h
shader/: fragment_shader.glsl
shader/demo1/: vertex_shader.glsl
shader/demo2/: fragment.glsl  vertex.glsl
source/: shader.cpp
